# SCARA_Motion_Planning

./: README.md
launch/: start_model.launch
rviz/: view_robot.rviz
src/gui/: CMakeLists.txt  package.xml
src/gui/include/: main_window.h  q_node.h
src/gui/src/: main.cpp  main_window.cpp  q_node.cpp
src/gui/ui/: main_window.ui
src/model/: CMakeLists.txt  package.xml
src/model/src/: publish_tf.cpp
src/model/urdf/: parameters.xacro  robot.xacro
