<package format="2">
  <name>gui</name>
  <version>0.1.0</version>
  <description>The gui package</description>
  <maintainer email="legopro@gmail.com">legopro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
